--- a/class5_example.html
+++ b/class5_example.html
@@ -3,7 +3,8 @@
     
     <head>
         <title> HTML and CSS </title>
-       
+       <style> 
+    </style>
     </head>
 <body>
     <h1> HTML and CSS </h1>
