--- a/Activity1.01.html
+++ b/Activity1.01.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="eng"> 
 <head>
-    <title></title>
+    <title>Activity</title>
 </head>
+
 <body>
     <h1> Lorem ipsum </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, id optio ratione harum non saepe maxime voluptas, ab ipsum sequi necessitatibus magnam quibusdam rem! Quidem voluptatum quisquam assumenda non distinctio?</p>
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
 </body>
+
 </html>
