--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,8 @@
        <section> 
 
          <div>
-       Phlebotomist
+       <h1>Phlebotomist </h1>
+
        HRF inc.
        Raleigh, NC
        September 2021 to Present
@@ -45,11 +46,11 @@
         July 2019 to June 2021
 <ul>
 
-        Ensure high quality products are available in produce, deli, bakery, dairy, meat, and other departments
-        Pack ready-to-sell products in proper containers and stock displays
-        Prepare and serve ready-to-eat food
-        Assist customers in ordering cakes, fulfilling deli orders, or finding the right produce
-        Keep area clean, sanitized, and customer-ready
+       <li>Ensure high quality products are available in produce, deli, bakery, dairy, meat, and other departments </li>
+        <li>Pack ready-to-sell products in proper containers and stock displays</li>
+       <li>Prepare and serve ready-to-eat food</li>
+       <li>Assist customers in ordering cakes, fulfilling deli orders, or finding the right produce</li>
+       <li> Keep area clean, sanitized, and customer-ready</li>
         </ul>
        </div>
        <div>
@@ -57,17 +58,16 @@
         Nurse River Veterinary Hospital - Wendell, NC
         September 2018 to September 2019
     <ul>
-        Receives animals to be admitted, is responsible for their proper identification
-        Releases animals to their owners as directed by the doctor; ensures that every animal released is clean and properly groomed prior to their release.
-        Has the ability to communicate with owners and make them feel comfortable with leaving their pet(s) in our care.
-        follow a regular schedule for cleaning and sanitizing hospital and all cages, runs, wards and related areas; changes litter boxes and food/water bowls.
-        feed each animal as prescribed by the attending patients
-        maintain laundry for the kennel and hospital.
-        brush outpatients.
-        collect urine and fecal specimens.
-        assist doctors and technicians with the administration of medications or with patient restraint.
-        Cleans equipment and facilities using chemicals and supplies; understands the
-        Grooming for dogs such as nail trimming, ear cleaning, anal gland expression, and using the air dryer
+       <li> Receives animals to be admitted, is responsible for their proper identification </li>
+       <li> Releases animals to their owners as directed by the doctor; ensures that every animal released is clean and properly groomed prior to their release.</li>
+       <li> Has the ability to communicate with owners and make them feel comfortable with leaving their pet(s) in our care.</li>
+       <li> follow a regular schedule for cleaning and sanitizing hospital and all cages, runs, wards and related areas; changes litter boxes and food/water bowls.</li>
+       <li> feed each animal as prescribed by the attending patients</li>
+       <li> maintain laundry for the kennel and hospital.</li>
+       <li> brush outpatients.</li>
+       <li> collect urine and fecal specimens.</li>
+        <li>assist doctors and technicians with the administration of medications or with patient restraint.</li>
+       <li> Cleans equipment and facilities using chemicals and supplies; understands the Grooming for dogs such as nail trimming, ear cleaning, anal gland expression, and using the air dryer</li>
         </ul>
         </div>
 <div>
@@ -75,13 +75,13 @@
         Hardee's - Zebulon, NC
         May 2017 to September 2018
 <ul>
-        Smile and greet guests and request order immediately upon arrival.
-        Take orders and enter them into the point of sales terminal accurately.
-        Suggestive sell and answer menu questions.
-        Collect money and provide accurate change.
-        Assemble orders, including condiments and other service items needed or requested.
-        Ensure that guests receive only quality products.
-        Thank guests and invite them to return.
+       <li></li> Smile and greet guests and request order immediately upon arrival.
+       <li></li> Take orders and enter them into the point of sales terminal accurately.
+       <li></li> Suggestive sell and answer menu questions.
+       <li></li> Collect money and provide accurate change.
+       <li></li> Assemble orders, including condiments and other service items needed or requested.
+       <li></li> Ensure that guests receive only quality products.
+       <li></li>Thank guests and invite them to return.
         Serve guests within designated service time.
         Keep sales area clean, organized and stocked.
         Clean and stock beverage bar.
@@ -93,16 +93,17 @@
         </div>
 </section>
         
+
         Education
+<ul>
+      Certification in Phlebotomy 
+       Johnston Community College - Johnston County, NC 
+       March 2021 to June 2021 
 
-        Certification in Phlebotomy
-        Johnston Community College - Johnston County, NC
-        March 2021 to June 2021
-
-        High school Diploma
-        East Wake Highschool 
-        June 2018
-
+        High school Diploma 
+       East Wake Highschool 
+       June 2018
+</ul>
 
     </body>
 
