--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
 
          <div>
        <h1>Phlebotomist </h1>
-
+<aside>
        HRF inc.
        Raleigh, NC
        September 2021 to Present
-
+</aside>
        </div>
 
         <div>
@@ -82,8 +82,8 @@
        <li></li> Assemble orders, including condiments and other service items needed or requested.
        <li></li> Ensure that guests receive only quality products.
        <li></li>Thank guests and invite them to return.
-        Serve guests within designated service time.
-        Keep sales area clean, organized and stocked.
+       <li> Serve guests within designated service time.
+        <li>Keep sales area clean, organized and stocked.
         Clean and stock beverage bar.
         Clean dining room tables and seating.
         Clean and stock restrooms.
