--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,16 @@
     </head>
 
     <body>
-       <header> Maggie Cervantes </header>
+       <header> <h1 style="font-size:2.5em;">Maggie Cervantes</h1>
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+      </header>
        <section> 
 
          <div>
