--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,17 @@
        <header> <h1 style="font-size:2.5em;">Maggie Cervantes</h1>
       <nav>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li> <a href="https://github.com/mcervantes2">Github</a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>s
         </ul>
       </nav>
       </header>
        <section> 
 
          <div>
-       <h1>Phlebotomist </h1>
+       <h1 class="job title">Phlebotomist </h1>
     
        <h3> HRF inc.
        Raleigh, NC </h3>
@@ -44,7 +44,7 @@
        
 
        <div>
-       <h1> Fresh Produce Associate </h1>
+       <h1 class="job title"> Fresh Produce Associate </h1>
        <h3> Walmart - Zebulon, NC </h3>
       <h4> July 2019 to June 2021 </h4>
 <ul>
@@ -57,7 +57,7 @@
         </ul>
        </div>
        <div>
-      <h1> Kennel Technician </h1>
+      <h1 class="job title"> Kennel Technician </h1>
        <h3> Nurse River Veterinary Hospital - Wendell, NC </h3>
        <h4> September 2018 to September 2019 </h4>
     <ul>
@@ -74,7 +74,7 @@
         </ul>
         </div>
 <div>
-       <h1> Cashier/Customer Service </h1>
+       <h1 class="job title"> Cashier/Customer Service </h1>
       <h3> Hardee's - Zebulon, NC </h3>
        <h4> May 2017 to September 2018 </h4>
 <ul>
