--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,13 @@
         <meta name="description" content="Maggie's Portfolio">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      
+      <link rel="stylesheet" href="styles/#style.css">
     </head>
 
     <body>
-       <header> <h1 style="font-size:2.5em;">Maggie Cervantes</h1>
+       <header> 
+        <h1>Maggie Cervantes</h1>
       <nav>
         <ul>
           <li> <a href="https://github.com/mcervantes2">Github</a></li>
