--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <nav>
         <ul class="socials">
           <li> <a href="https://github.com/mcervantes2">Github</a></li>
-          <li><a href="#"></a>Linkedin</li>
+          <li><a href=""></a>Linkedin</li>
           <li><a href="#"></a>Twitter</li>
           <li><a href="#"></a>Projects</li>
         </ul>
