--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
     </head>
 
     <body>
+      <img class="background" src="/photos/clouds.jpg" alt="cloud background">
        <header> 
         <h1>Maggie Cervantes</h1>
       <nav>
@@ -47,6 +48,8 @@
       
       
       <section class="work-exp"> 
+
+        <h1 class="work-heading"> Work Experience </h1>
 
          <div class="we">
        <h1 class="job-title">Phlebotomist </h1>
