--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Maggie's Portfolio</title>
 </head>
 <body>
-    <p> Hello world </p>
+    <a href="/portfolio.html">Portfolio</a>
 </body>
 </html>
