--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,11 @@
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Satisfy&display=swap" rel="stylesheet">
 
         
     </head>
@@ -23,8 +27,8 @@
       <nav>
         <ul class="socials">
           <li> <a href="https://github.com/mcervantes2">Github</a></li>
-          <li><a href=""></a>Linkedin</li>
-          <li><a href="#"></a>Twitter</li>
+          <li> <a href="mailto:cervantesmag25@gmail.com">Email Me</a></li>
+          <li><a href="https://www.linkedin.com/in/maggie-cervantes-8b78a1246/"></a>Linkedin</li>
           <li><a href="#"></a>Projects</li>
         </ul>
       </nav>
