--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <ul class="socials">
           <li> <a href="https://github.com/mcervantes2">Github</a></li>
           <li> <a href="mailto:cervantesmag25@gmail.com">Email Me</a></li>
-          <li><a href="https://www.linkedin.com/in/maggie-cervantes-8b78a1246/"></a>Linkedin</li>
+          <li><a href="https://www.linkedin.com/in/maggie-cervantes-8b78a1246/">Linkedin</a></li>
           <li><a href="#"></a>Projects</li>
         </ul>
       </nav>
