--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,11 @@
 </section>
         
 <section class="education">
+  
+  <h1 class="heading-ed">Education</h1>
+  
   <div>
+
       <h1> Education </h1>
 
      <h3> High School Diploma </h3>
@@ -140,8 +144,8 @@
        June 2018 
 
       <h3> Certificate in Phlebotomy </h3>  
-      Johnston Community College - Johnston County, NC 
-       March 2021 to June 2021
+      Johnston Community College 
+      June 2021
 
        <h3> Basic Life Support and CPR</h3>
        December 2020 to December 2022
